--- a/public/styles.css
+++ b/public/styles.css
@@ -40,13 +40,13 @@ body * {
 }
 
 #google{
-    color: blueviolet;
+    background-color: blueviolet;
     height: 60px;
     width: 80px;
 }
 
 #popdolphins{
-    color: yellow;
-    height: 30px;
-    width: 50px;
+    background-color: yellow;
+    height: 60px;
+    width: 80px;
 }
