--- a/public/styles.css
+++ b/public/styles.css
@@ -4,6 +4,7 @@
     outline: auto;
     outline-color: black;
     outline-style: groove;
+    text-align: center;
 
 }
 
@@ -33,6 +34,7 @@ h1 {
 }
 
 body * { 
+    color: black;
     background-color: forestgreen;
     animation-name: changingBackground;
     animation-duration: 1s;
